spade-tests/src/snapshots/spade_tests__auto_traits__tuples_can_deny_data_generic.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A<T> {
    x: T
}

fn needs_data<T: Data>(x: T) {}

fn test1(x: A<(inv bool, bool)>) {
    needs_data(x)
}


error: Argument type mismatch. Expected core::marker::Data got A<(inv bool, bool)>
  ┌─ testinput:8:16
  │
5 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
8 │     needs_data(x)
  │                ^ A<(inv bool, bool)> does not implement core::marker::Data
